styling the first section of the grid

--- a/youtube.html
+++ b/youtube.html
@@ -1,9 +1,53 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>YouTube Clone</title>
-    </head>
-    <body>
 
-    </body>
+<head>
+    <title>YouTube Clone</title>
+    <link rel="stylesheet" href="youtube.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap" rel="stylesheet">
+</head>
+
+<body style="
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    column-gap: 10px;
+    ">
+    <div class="imageOne">
+        <img class="tech" src="images/talkingtech.webp">
+        <div style="
+        display: grid;
+        grid-template-columns: 35px 1fr;
+        margin-top: 0px;
+        column-gap: 15px;
+        ">
+            <div>
+                <img class="talkingtech" src="images/MarquesLogo.jpeg">
+            </div>
+            <div class="right">
+                <p class="talkingTitle">
+                    Talking Tech and AI with Google CEO Sundar Pichai!
+                </p>
+                <p>
+                    Marquee Brownlee
+                </p>
+                <p>
+                    3.4M views &#8226; 6 months ago
+                </p>
+            </div>
+        </div>
+        <div>
+
+        </div>
+        <div>
+
+        </div>
+        <div>
+
+        </div>
+    </div>
+
+</body>
+
 </html>
