--- a/youtube.html
+++ b/youtube.html
@@ -13,6 +13,7 @@
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     column-gap: 10px;
+    row-gap: 10px;
     ">
     <div class="imageOne">
         <img class="tech" src="images/talkingtech.webp">
@@ -22,32 +23,34 @@
         margin-top: 0px;
         column-gap: 15px;
         ">
-            <div>
-                <img class="talkingtech" src="images/MarquesLogo.jpeg">
-            </div>
+
+            <img class="talkingtech" src="images/MarquesLogo.jpeg">
+
             <div class="right">
                 <p class="talkingTitle">
                     Talking Tech and AI with Google CEO Sundar Pichai!
                 </p>
-                <p>
+                <p class="marqueeName">
                     Marquee Brownlee
                 </p>
-                <p>
+                <p class="threeViews">
                     3.4M views &#8226; 6 months ago
                 </p>
             </div>
         </div>
-        <div>
-
-        </div>
-        <div>
-
-        </div>
-        <div>
+    </div>
+    <div class="imageTwo">
+        <img class="MarkPic" src="images/mark.webp">
+        <div style="
+        display: grid;
+        grid-template-columns: 35px 1fr;
+        column-gap: 15px;
+        margin-top: 0px;
+        ">
+            <img class="Mark" src="images/MarkLogo.jpeg">
 
         </div>
     </div>
-
 </body>
 
 </html>
