ignored practice file

--- a/youtube.html
+++ b/youtube.html
@@ -3,7 +3,8 @@
 
 <head>
     <title>YouTube Clone</title>
-    <link rel="stylesheet" href="youtube.css">
+    <link rel="stylesheet" href="styles/body.css">
+    <link rel="stylesheet" href="styles/header.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap" rel="stylesheet">
@@ -26,7 +27,7 @@
 
             <img class="talkingtech" src="images/MarquesLogo.jpeg">
 
-            <div class="right">
+            <div class="PichaiBlock">
                 <p class="talkingTitle">
                     Talking Tech and AI with Google CEO Sundar Pichai!
                 </p>
@@ -47,10 +48,65 @@
         column-gap: 15px;
         margin-top: 0px;
         ">
-            <img class="Mark" src="images/MarkLogo.jpeg">
-
+            <img class="MarkWeb" src="images/MarkLogo.jpeg">
+            <div class="MarkBlock">
+                <p class="MarkTitle">
+                    Try Not To Laugh Challenge #9
+                </p>
+                <p class="MarkName">
+                    Markiplier
+                </p>
+                <p class="MarkViews">
+                    19M views &#8226; 4 years ago
+                </p>
+            </div>
         </div>
     </div>
+    <div class="imageTwo">
+        <img class="MarkPic" src="images/SniperThumbnail.webp">
+        <div style="
+        display: grid;
+        grid-template-columns: 35px 1fr;
+        column-gap: 15px;
+        margin-top: 0px;
+        ">
+            <img class="MarkWeb" src="images/SniperLogo.jpeg">
+            <div class="MarkBlock">
+                <p class="MarkTitle">
+                    Crazy Tik Toks Taken Moments Before DISASTER
+                </p>
+                <p class="MarkName">
+                    SSSniperWolf
+                </p>
+                <p class="MarkViews">
+                    12M views &#8226; 1 year ago
+                </p>
+            </div>
+        </div>
+    </div>
+    <div class="imageTwo">
+        <img class="MarkPic" src="images/VeritThumbnail.webp">
+        <div style="
+        display: grid;
+        grid-template-columns: 35px 1fr;
+        column-gap: 15px;
+        margin-top: 0px;
+        ">
+            <img class="MarkWeb" src="images/VeLogo.jpeg">
+            <div class="MarkBlock">
+                <p class="MarkTitle">
+                    The Simplest Math Problem No One Can Solve - Collatz Conjecture
+                </p>
+                <p class="MarkName">
+                    Veritasium
+                </p>
+                <p class="MarkViews">
+                    18M views &#8226; 4 months ago
+                </p>
+            </div>
+        </div>
+    </div>
+
 </body>
 
 </html>
