--- a/youtube.html
+++ b/youtube.html
@@ -3,110 +3,131 @@
 
 <head>
     <title>YouTube Clone</title>
-    <link rel="stylesheet" href="styles/body.css">
     <link rel="stylesheet" href="styles/header.css">
+    <link rel="stylesheet" href="styles/general.css">
+    <link rel="stylesheet" href="styles/body.css">
+    <link rel="stylesheet" href="styles/icons.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap" rel="stylesheet">
+
 </head>
 
-<body style="
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    column-gap: 10px;
-    row-gap: 10px;
+<body>
+    <div class="head">
+        <div style="
+        width: 150px;
+        ">
+            <img src="icons/hamburger-menu.svg" class="hamburger">
+            <img src="icons/youtube-logo.svg" class="youTube">
+        </div>
+        <input placeholder="Search" style="flex: 1">
+        <img src="icons/search.svg" class="searching">
+        <img src="icons/voice-search-icon.svg" class="voice">
+        <div style="
+        width: 150px;
+        text-align: right;
+        ">
+            right side
+        </div>
+    </div>
+    <div style="
+    display: grid; 
+    grid-template-columns: 1fr 1fr 1fr 1fr; 
+    column-gap: 10px; 
+    row-gap: 10px; 
     ">
-    <div class="imageOne">
-        <img class="tech" src="images/talkingtech.webp">
-        <div style="
-        display: grid;
-        grid-template-columns: 35px 1fr;
-        margin-top: 0px;
-        column-gap: 15px;
-        ">
+        <div class=" imageOne">
+            <img class="tech" src="images/talkingtech.webp">
+            <div style="
+            display: grid;
+            grid-template-columns: 35px 1fr;
+            margin-top: 0px;
+            column-gap: 15px;
+            ">
 
-            <img class="talkingtech" src="images/MarquesLogo.jpeg">
+                <img class="talkingtech" src="images/MarquesLogo.jpeg">
 
-            <div class="PichaiBlock">
-                <p class="talkingTitle">
-                    Talking Tech and AI with Google CEO Sundar Pichai!
-                </p>
-                <p class="marqueeName">
-                    Marquee Brownlee
-                </p>
-                <p class="threeViews">
-                    3.4M views &#8226; 6 months ago
-                </p>
+                <div class="PichaiBlock">
+                    <p class="talkingTitle">
+                        Talking Tech and AI with Google CEO Sundar Pichai!
+                    </p>
+                    <p class="marqueeName">
+                        Marquee Brownlee
+                    </p>
+                    <p class="threeViews">
+                        3.4M views &#8226; 6 months ago
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div class="imageTwo">
+            <img class="MarkPic" src="images/mark.webp">
+            <div style="
+            display: grid;
+            grid-template-columns: 35px 1fr;
+            column-gap: 15px;
+            margin-top: 0px;
+            ">
+                <img class="MarkWeb" src="images/MarkLogo.jpeg">
+                <div class="MarkBlock">
+                    <p class="MarkTitle">
+                        Try Not To Laugh Challenge #9
+                    </p>
+                    <p class="MarkName">
+                        Markiplier
+                    </p>
+                    <p class="MarkViews">
+                        19M views &#8226; 4 years ago
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div class="imageTwo">
+            <img class="MarkPic" src="images/SniperThumbnail.webp">
+            <div style="
+            display: grid;
+            grid-template-columns: 35px 1fr;
+            column-gap: 15px;
+            margin-top: 0px;
+            ">
+                <img class="MarkWeb" src="images/SniperLogo.jpeg">
+                <div class="MarkBlock">
+                    <p class="MarkTitle">
+                        Crazy Tik Toks Taken Moments Before DISASTER
+                    </p>
+                    <p class="MarkName">
+                        SSSniperWolf
+                    </p>
+                    <p class="MarkViews">
+                        12M views &#8226; 1 year ago
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div class="imageTwo">
+            <img class="MarkPic" src="images/VeritThumbnail.webp">
+            <div style="
+            display: grid;
+            grid-template-columns: 35px 1fr;
+            column-gap: 15px;
+            margin-top: 0px;
+            ">
+                <img class="MarkWeb" src="images/VeLogo.jpeg">
+                <div class="MarkBlock">
+                    <p class="MarkTitle">
+                        The Simplest Math Problem No One Can Solve - Collatz Conjecture
+                    </p>
+                    <p class="MarkName">
+                        Veritasium
+                    </p>
+                    <p class="MarkViews">
+                        18M views &#8226; 4 months ago
+                    </p>
+                </div>
             </div>
         </div>
     </div>
-    <div class="imageTwo">
-        <img class="MarkPic" src="images/mark.webp">
-        <div style="
-        display: grid;
-        grid-template-columns: 35px 1fr;
-        column-gap: 15px;
-        margin-top: 0px;
-        ">
-            <img class="MarkWeb" src="images/MarkLogo.jpeg">
-            <div class="MarkBlock">
-                <p class="MarkTitle">
-                    Try Not To Laugh Challenge #9
-                </p>
-                <p class="MarkName">
-                    Markiplier
-                </p>
-                <p class="MarkViews">
-                    19M views &#8226; 4 years ago
-                </p>
-            </div>
-        </div>
-    </div>
-    <div class="imageTwo">
-        <img class="MarkPic" src="images/SniperThumbnail.webp">
-        <div style="
-        display: grid;
-        grid-template-columns: 35px 1fr;
-        column-gap: 15px;
-        margin-top: 0px;
-        ">
-            <img class="MarkWeb" src="images/SniperLogo.jpeg">
-            <div class="MarkBlock">
-                <p class="MarkTitle">
-                    Crazy Tik Toks Taken Moments Before DISASTER
-                </p>
-                <p class="MarkName">
-                    SSSniperWolf
-                </p>
-                <p class="MarkViews">
-                    12M views &#8226; 1 year ago
-                </p>
-            </div>
-        </div>
-    </div>
-    <div class="imageTwo">
-        <img class="MarkPic" src="images/VeritThumbnail.webp">
-        <div style="
-        display: grid;
-        grid-template-columns: 35px 1fr;
-        column-gap: 15px;
-        margin-top: 0px;
-        ">
-            <img class="MarkWeb" src="images/VeLogo.jpeg">
-            <div class="MarkBlock">
-                <p class="MarkTitle">
-                    The Simplest Math Problem No One Can Solve - Collatz Conjecture
-                </p>
-                <p class="MarkName">
-                    Veritasium
-                </p>
-                <p class="MarkViews">
-                    18M views &#8226; 4 months ago
-                </p>
-            </div>
-        </div>
-    </div>
-
 </body>
 
 </html>
