--- a/youtube.html
+++ b/youtube.html
@@ -15,20 +15,21 @@
 
 <body>
     <div class="head">
-        <div style="
-        width: 150px;
-        ">
+        <div class="LeftIcons">
             <img src="icons/hamburger-menu.svg" class="hamburger">
             <img src="icons/youtube-logo.svg" class="youTube">
         </div>
-        <input placeholder="Search" style="flex: 1">
-        <img src="icons/search.svg" class="searching">
-        <img src="icons/voice-search-icon.svg" class="voice">
-        <div style="
-        width: 150px;
-        text-align: right;
-        ">
-            right side
+        <div class="MiddleHead">
+            <input placeholder="Search" class="SearchInput">
+            <img src="icons/search.svg" class="searching">
+            <img src="icons/voice-search-icon.svg" class="voice">
+        </div>
+        
+        <div class="RightIcons">
+            <img src="icons/upload.svg" class="upload">
+            <img src="icons/youtube-apps.svg" class="apps">
+            <img src="icons/notifications.svg" class="notification">
+            <img src="images/MarkLogo.jpeg" class="MarksLogo">
         </div>
     </div>
     <div style="
