--- a/youtube.html
+++ b/youtube.html
@@ -55,11 +55,11 @@ background-color: rgb(250, 250, 250);
                 </div>
 
                 <div class="notify">
-                    3
+                    1
                 </div>
             </div>
             <div class="Personal-profile">
-                <img src="images/MarkLogo.jpeg" class="MarksLogo">
+                <img src="icons/myProfile.jpg" class="MarksLogo">
             </div>
             
 
